# philosophy

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml
philosophy/: __init__.py  mixin.py  model.py  philosophy.py  utils.py
philosophy/test/: conftest.py  test_binds.py  test_custom_model_class.py  test_meta_data.py  test_sqlalchemy_includes.py  test_table_mapping.py  test_utils.py
